--- a/package.json
+++ b/package.json
@@ -11,13 +11,18 @@
   },
   "dependencies": {
     "@smastrom/react-rating": "^1.4.0",
+    "axios": "^1.6.4",
+    "firebase": "^10.7.1",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-helmet-async": "^2.0.4",
+    "react-hook-form": "^7.49.2",
+    "react-hot-toast": "^2.4.1",
     "react-icons": "^4.12.0",
     "react-parallax": "^3.5.1",
+    "react-query": "^3.39.3",
     "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.21.1",
     "react-simple-captcha": "^9.3.1",
