--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@smastrom/react-rating": "^1.4.0",
     "axios": "^1.6.4",
     "firebase": "^10.7.1",
+    "jsonwebtoken": "^9.0.2",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.1",
     "react": "^18.2.0",
@@ -28,6 +29,7 @@
     "react-simple-captcha": "^9.3.1",
     "react-tabs": "^6.0.2",
     "sort-by": "^1.2.0",
+    "sweetalert2": "^11.10.2",
     "swiper": "^11.0.5"
   },
   "devDependencies": {
